ASG-ALB.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >-
  ASG-ALB.yaml is a template to create a new Application Load Balancer and Auto Scaling Group where the docker registry mirror is placed
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Parameters:
          - Subnets
        Label:
          default: Network Configuration
Parameters:
  VPCOnica:
    Type: AWS::EC2::VPC::Id
    Description: Name of an existing VPC Where the ASG and Load Balancer will be created
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair to enable SSH access into the docker registry mirror servers
  Sub1:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet Id for the 1st Load Balancer Subnet
  Sub2:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet Id for the 2nd Load Balancer Subnet
  Sub3:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet Id for the 3er Load Balancer Subnet
Resources:
  ALBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable http access via port 22
      GroupName: ALBSecurityGroup
      VpcId: !Ref VPCOnica
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
  ALBOnica:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: ALBOnica
      Scheme: internet-facing
      Subnets: 
        - !Ref Sub1
        - !Ref Sub2
        - !Ref Sub3
      Type: network
  TGOnica:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: TCP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 3
      Name: TGOnica
      Protocol: TCP
      Port: 22
      TargetType: instance
      UnhealthyThresholdCount: 3
      VpcId: !Ref VPCOnica
  ListenerOnicaWeb:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      DefaultActions: 
        - Type: forward
          TargetGroupArn: !Ref TGOnica
      LoadBalancerArn: !Ref ALBOnica
      Port: 22
      Protocol: tcp
  EC2WebSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable ssh access via port 22 to EC2 Instance
      GroupName: EC2WebSecurityGroup
      VpcId: !Ref VPCOnica
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
  InboundRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref EC2WebSecurityGroup
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
  LaunchTemplateOnica:
    Type: AWS::EC2::LaunchTemplate
    Metadata:
      AWS::CloudFormation::Init:
        config:
          packages:
            yum:
              httpd: []
              php: []
          files:
            /var/www/html/index.php:
              content: !Sub |
                <?php echo gethostname(); ?>
          services:
            sysvinit:
              httpd:
                enabled: true
                ensureRunning: true
    Properties: 
      LaunchTemplateName: tem-onica-web
      LaunchTemplateData: 
        ImageId: ami-0742b4e673072066f
        InstanceType: t2.micro
        KeyName: !Ref KeyName
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true
            DeleteOnTermination: true
            Groups: 
              - !Ref EC2WebSecurityGroup
        UserData:
          'Fn::Base64':
            !Sub |
            #!/bin/bash
            yum install -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchTemplateOnica  --region ${AWS::Region}       
  AutoScalingWeb:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: OnicaWebAuto
      HealthCheckGracePeriod: 300
      VPCZoneIdentifier:
        - !Ref Sub1
        - !Ref Sub2
        - !Ref Sub3
      Cooldown: 120
      MinSize: '1'
      MaxSize: '6'
      DesiredCapacity: '2'
      LaunchTemplate: 
        LaunchTemplateName: tem-onica-web
        Version: !GetAtt 
          - LaunchTemplateOnica
          - LatestVersionNumber
Outputs:
  LoadBalancerDNS:
    Description: 
      The Public DNS for the LoadBalancer
    Value:
      !GetAtt 
        - ALBOnica
        - DNSName
